@@ -183,7 +183,7 @@ public class LogicalAggregationOperator extends LogicalOperator {
     @Override
     public ValueProperty deriveValueProperty(List<OptExpression> inputs) {
         if (CollectionUtils.isEmpty(inputs)) {
-            return new ValueProperty(ImmutableMap.of());
+            return new ValueProperty(Map.of());
         }
         ValueProperty childValueProperty = inputs.get(0).getValueProperty();
 
